<resources>
    <string name="app_name">Android入门指南</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="please_login_in">please login in</string>
    <string name="component">Component</string>
    <string name="application">Application</string>
    <string name="usage">Usage</string>
    <string name="activity">Activity</string>
    <string name="service">Service</string>
    <string name="broadCast">BroadCast</string>
    <string name="contentProvider">ContentProvider</string>
    <string name="presisent">Persistent</string>
    <string name="file">File</string>
    <string name="shareprefrence">SharePrefrence</string>
    <string name="sqlite">Sqlite</string>
    <string name="contentprovider">ContentProvider</string>
    <string name="time_wrap">更新时间: %s</string>
    <string name="date_today">今天</string>
    <string name="date_yesterday">昨天</string>
    <string name="search">搜索</string>
    <string name="more">更多</string>
    <string name="account">账号</string>
    <string name="password_signin">密码</string>
    <string name="please_input_pwd">请出入密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_now">现在注册</string>
    <string name="register_title">注册</string>
    <string name="agree_ower_layer">同意</string>
    <string name="login_now">现在登陆</string>
    <string name="info_username_text">请出入用户名</string>
    <string name="register">注册</string>
    <string name="backlogin">返回登陆</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="signin">登陆</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="login">登陆</string>
    <string name="check_update">检查更新</string>
    <string name="remove_ad">去除广告</string>
    <string name="set_theme">设置主题</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="quit">退出登陆</string>
    <string name="close_send">关闭推送</string>
    <string name="send_introduce">偶尔我可能会推段子,你可以关掉</string>
    <string name="comment_introduce">你的鼓励让我做的更好</string>
    <string name="app_introduce">App介绍</string>
    <string name="operationing">正在执行操作中...</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="setup_profile_cancel">取消</string>
    <string name="update_title">更新提示</string>
    <string name="update_content">发现更新.是否更新?</string>
    <string name="remove_ad_tip">开通提示</string>
    <string name="ad_content">未开通此功能，需要开通吗</string>
    <string name="open">开通</string>
    <string name="share">分享</string>
    <string name="like">喜欢</string>
    <string name="install_info">安装信息</string>
    <string name="version">版本:</string>
    <string name="visit">访问</string>
    <string name="version_title">版本号:</string>
    <string name="copyright">版权:</string>
    <string name="email">wuyihua86@gmail.com</string>
    <string name="github_content">https://github.com/HumorSmith</string>
    <string name="gmail_title">Gmail:</string>
    <string name="github_title">Github:</string>
    <string name="send">发送</string>
    <string name="sender">发件人:</string>
    <string name="valid_email">邮箱地址</string>
    <string name="topic">主题:</string>
    <string name="feedback_topic">AndroidGuide意见反馈</string>
    <string name="describe_problem">请描述您遇到的问题</string>
    <string name="common_point">评分</string>
    <string name="donate">捐赠</string>
    <string name="rechare">充值</string>
    <string name="not_install_plugin">监测到本机尚未安装支付插件,无法进行支付,请先安装插件(无流量消耗)</string>
    <string name="update_plugin">监测到本机的支付插件不是最新版,最好进行更新,请先更新插件(无流量消耗)</string>
    <string name="manual_quary">支付结果未知,请稍后手动查询</string>
    <string name="reinstall">监测到你尚未安装支付插件,无法进行支付,请先安装插件(已打包在本地,无流量消耗),安装结束后重新支付</string>
    <string name="remove_add">移除广告</string>
    <string name="open_grade_knowlege">开发高级内容</string>
    <string name="remove_add_subtitle">轻松移除广告.有一个干净的阅读环境</string>
    <string name="open_grade_content">开放高级内容</string>
    <string name="upgrade_knowleage">IPC.Binder机制.设计模式.算法等知识</string>
    <string name="support_ten_yuan">支持一波 | 10元</string>
    <string name="update_knowleage">知识更新</string>
    <string name="upadte_content">不定期更新知识库.共同进步</string>
    <string name="support_money">支持一下|(任意金额均可)</string>
    <string name="two_finish">点击支持流血又流泪的开发者....</string>

</resources>
