<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/dp80"
            android:orientation="vertical">



            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_marginTop="30dp"-->
            <!--android:orientation="horizontal">-->

            <!--<EditText-->
            <!--android:id="@+id/fullinfo_username_et"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->


            <!--android:gravity="center"-->
            <!--android:hint="@string/info_username_text"-->

            <!--/>-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_marginTop="15dp"-->
            <!--android:orientation="horizontal">-->

            <!--<EditText-->

            <!--android:id="@+id/fullinfo_pwd_et"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->

            <!--android:gravity="center"-->
            <!--android:hint="@string/please_input_acount"-->

            <!--/>-->
            <!--</LinearLayout>-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:text="HomorSmith"
                    android:id="@+id/fullinfo_username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/info_username_text"
                    android:inputType="phone"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_wrap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:text="375809600@qq.com"
                    android:id="@+id/input_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_input_email"
                    android:inputType="phone"
                    android:paddingLeft="15dp"
                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_rapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:text="123456"
                    android:id="@+id/fullinfo_pwd_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_signin"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"

                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_confirm_rapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:text="123456"
                    android:id="@+id/fullinfo_pwd_confirm_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_pwd"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"

                    android:textSize="15sp"/>

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/fullinfo_commit_btn"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/register"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/back2login_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/backlogin"
            />
    </RelativeLayout>
</com.flipboard.bottomsheet.BottomSheetLayout>